--- a/index.html
+++ b/index.html
@@ -47,9 +47,17 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/kathrynsteg" target="_blank"
+            >Kathryn Stegeman</a
+          >
+          and is
+          <a href="https://github.com/kathrynsteg/weather-app" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a href="https://elaborate-toffee-4e1228.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
